# clog

./: .gitignore  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml  build_windows.yml
src/: .gitignore  CMakeLists.txt
src/include/clog/: clog.h  console.h
src/lib/: CMakeLists.txt  Tornado.cmake  cmake_gen.toml
src/lib/posix/: clog.c  console.c
